--- a/FloatingPosition.html
+++ b/FloatingPosition.html
@@ -5,6 +5,14 @@
 	<meta charset="utf-8">
 	<title> Positioning Elements By Floating - Nikhil Nandan</title>
 	<style>
+		footer{
+			color: pink;
+			text-align: center;
+			text-decoration-style: solid;
+			font-family: serif;
+			font-size: 150%;
+			
+		}
 		div{
 			background-color: blue;
 		}
@@ -47,5 +55,8 @@
 		<p id="p4"></p>
 		<section>This is regular content continuing after the paragraph boxes.</section>
 	</div>
+	<footer>
+		<pre> Maintained By Nikhil Kumar </pre>
+	</footer>
 </body>
 </html>
