--- a/FloatingPosition.html
+++ b/FloatingPosition.html
@@ -25,10 +25,12 @@
 			width: 50px;
 			height: 50px;
 			border: 1px solid black;
+			float: left;
+			margin-right: 275px;
+			margin-left: 10px;
 		}
 		#p1{
 			background-color: orange;
-			float: right;
 		}
 		#p2{
 			background-color: green;
@@ -42,6 +44,7 @@
 		section{
 			color:pink;
 			lighting-color: currentColor;
+			clear: left;
 
 		}
 	</style>
@@ -53,6 +56,7 @@
 		<p id="p2"></p>
 		<p id="p3"></p>
 		<p id="p4"></p>
+		
 		<section>This is regular content continuing after the paragraph boxes.</section>
 	</div>
 	<footer>
