--- a/FloatingPosition.html
+++ b/FloatingPosition.html
@@ -13,8 +13,12 @@
 			font-size: 150%;
 			
 		}
+		*{
+			box-sizing: border-box;
+		}
 		div{
 			background-color: blue;
+			
 		}
 		h1{
 			text-shadow: currentColor;
@@ -22,12 +26,10 @@
 			color: red;
 		}
 		p{
-			width: 50px;
-			height: 50px;
+			width: 50%;
 			border: 1px solid black;
 			float: left;
-			margin-right: 275px;
-			margin-left: 10px;
+			
 		}
 		#p1{
 			background-color: orange;
@@ -36,7 +38,6 @@
 			background-color: green;
 		}
 		#p3{
-			background-color: pink;
 		}
 		#p4{
 			background-color: aqua;
@@ -45,6 +46,11 @@
 			color:pink;
 			lighting-color: currentColor;
 			clear: left;
+			border: 2px solid pink;
+			margin-left: 350px;
+			width: 300px;
+			text-align: center;
+
 
 		}
 	</style>
@@ -52,10 +58,12 @@
 <body>
 	<h1> Floating Elements</h1>
 	<div>
-		<p id="p1"></p>
-		<p id="p2"></p>
-		<p id="p3"></p>
-		<p id="p4"></p>
+		<p id="p1">Voluptate ea mollit consequat veniam qui exercitation labore in id sunt commodo officia. Officia sed dolore nisi duis eiusmod eu culpa ut veniam in in. Consectetur voluptate occaecat nulla culpa cupidatat proident ullamco excepteur non ex ex id deserunt. Elit amet sunt et amet excepteur mollit pariatur tempor in laborum exercitation in et tempor velit. Eu cupidatat dolor et veniam cupidatat laboris ut velit nostrud deserunt deserunt. Lorem ipsum commodo culpa deserunt cupidatat pariatur ex sed aute sunt ullamco et veniam ullamco mollit eiusmod. Aute quis et pariatur est duis in nulla elit cupidatat deserunt in cillum minim exercitation sunt dolor eiusmod.</p>
+		<p id="p2">Deserunt labore voluptate et magna laborum dolor excepteur ut dolor tempor occaecat velit consectetur adipisicing ut in. Consectetur occaecat amet dolor fugiat est ad qui do veniam aute enim excepteur minim et. Pariatur incididunt in id mollit sit est sed excepteur pariatur adipisicing labore do exercitation magna officia. Dolore occaecat sed veniam ex quis nostrud tempor in laborum elit sunt in ea. Lorem ipsum ut enim dolor consectetur est aute non quis irure exercitation incididunt excepteur consequat excepteur nisi duis. Dolor laboris est labore sed ut enim in esse minim nisi est cupidatat laboris aliqua in velit. Sunt consequat nostrud velit sint ut sint ad pariatur culpa quis eu exercitation labore do tempor. Lorem ipsum minim eu do ut veniam sint adipisicing est aliquip dolor. Sint sunt dolore ad qui id in duis in voluptate occaecat incididunt amet dolor nulla laboris. Laborum do elit amet culpa deserunt irure commodo dolor reprehenderit adipisicing. Dolor deserunt cillum non adipisicing laboris officia do ad anim sit exercitation anim. Minim sint velit non dolore duis ut ut in velit enim culpa sed sit sint pariatur elit culpa pariatur. Lorem ipsum anim labore veniam veniam in mollit veniam in voluptate eu. Et in est non minim exercitation do tempor occaecat aute officia in veniam sed voluptate ut.</p>
+
+		<img src="1.jpg">
+
+		
 		
 		<section>This is regular content continuing after the paragraph boxes.</section>
 	</div>
