--- a/solutions/Week-2/index.html
+++ b/solutions/Week-2/index.html
@@ -12,7 +12,7 @@
 	<div class="col-lg-4 col-md-6 col-sm-12">
 		<div class="box">
 			<p class="title1"> Sachin Tendulkar </p>
-			<p class="text">Lorem ipsum veniam ea consequat sint sed non sint commodo magna ut dolor. Mollit consequat reprehenderit ullamco adipisicing commodo excepteur tempor sint dolore ut nisi sit nulla cillum occaecat dolore amet.</p>
+			<p class="text">Lorem ipsum veniam ea consequat sint sed non sint commodo magna ut dolor. Mollit consequat reprehenderit ullamco adipisicing commodo excepteur tempor sint dolore ut nisi sit.</p>
 		</div>
 	</div>
 
