--- a/solutions/Week-2/index.html
+++ b/solutions/Week-2/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1>Greatest Cricketers</h1>
+	<div class="row">
 
 	<div class="col-lg-4 col-md-6 col-sm-12">
 		<div class="box">
@@ -28,6 +29,7 @@
 			<p class="t3"> Saurav Ganguly </p>
 			<p class="text">Veniam nulla incididunt adipisicing eiusmod in et eu elit nisi ut quis est et laborum ut consequat veniam amet. Duis laborum nisi excepteur consectetur nisi in anim laborum reprehenderit ullamco ex. Laborum sint.</p>
 		</div>
+	</div>
 	</div>
 
 
