--- a/solutions/Week-2/index.html
+++ b/solutions/Week-2/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Greatest Cricketers</title>
-	<meta name="viewport" content="width=device-width initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+
+<title>Greatest Cricketer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
-	<h1>Greatest Cricketers</h1>
-	<div class="row">
-
-	<div class="col-lg-4 col-md-6 col-sm-12">
-		<div class="box">
-			<p class="title1"> Sachin Tendulkar </p>
-			<p class="text">Lorem ipsum veniam ea consequat sint sed non sint commodo magna ut dolor. Mollit consequat reprehenderit ullamco adipisicing commodo excepteur tempor sint dolore ut nisi sit.</p>
-		</div>
-	</div>
-
-	<div class="col-lg-4 col-md-6 col-sm-12">
-		<div class="box">
-			<p class="t2"> Rahul Dravid </p>
-			<p class="text">Qui sit mollit aliquip minim deserunt cupidatat voluptate ut anim et. Sint sint deserunt dolore ex nulla amet amet nostrud sed sint ullamco elit cupidatat tempor occaecat dolor minim enim. Sit occaecat ut.</p>
-		</div>
-	</div>
-
-	<div class="col-lg-4 col-md-6 col-sm-12">
-		<div class="box">
-			<p class="t3"> Saurav Ganguly </p>
-			<p class="text">Veniam nulla incididunt adipisicing eiusmod in et eu elit nisi ut quis est et laborum ut consequat veniam amet. Duis laborum nisi excepteur consectetur nisi in anim laborum reprehenderit ullamco ex. Laborum sint.</p>
-		</div>
-	</div>
-	</div>
+<h1>Greatest Cricketer</h1>
 
 
 
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+  		<p class="all p1">Rahul Dravid</p>
+  		<p class="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>
+  </div>
 
+  <div class="col-lg-4 col-md-6 col-sm-12">
+  	<div class="box">
+   		<p class="all p2">Saurav Ganguly</p>
+   		<p class="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>
+  </div>
+
+  <div class="col-lg-4 col-md-12 col-sm-12">
+  	<div class="box">
+  		<p class="all p3">Sachin Tendulkar</p>
+  		<p class="text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+  	</div>	
+  </div>
+</div>
 </body>
 </html>
