--- a/nikhilbistro/menu-categories.html
+++ b/nikhilbistro/menu-categories.html
@@ -93,7 +93,7 @@
 			<div class="col-md-3 col-sm-4 col-xs-6 col-xss-12">
 				<a href="single-category.html">
 					<div class="category-title">
-						<img src="images/menu/A/a.jpg" alt="Lunch" width="200" height="200">
+						<img src="images/menu/B/b.jpg" alt="Lunch" width="200" height="200">
 						<span>Lunch</span>
 					</div>
 				</a>
